--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,17 @@
 development:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
+  adapter: postgresql
+  encoding: unicode
   database: belightfulyoga_development
   pool: 5
   username: belightfulyoga
   password:
-  socket: /tmp/mysql.sock
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
+  adapter: postgresql
+  encoding: unicode
   database: belightfulyoga_test
   pool: 5
   username: belightfulyoga
   password:
-  socket: /tmp/mysql.sock
 
 production:
   adapter: postgresql
